--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,20 @@
 </head>
 <body>
     <header>
-        <div class="navbar">
-            <ul>
+        <div class="navbar no-select">
+            <ul class="links">
                 <li><a href="/">Home</a></li>
-                <li><a href="/">Software</a></li>
+                <li>
+                    <p class="link submenu-btn" id="software">Software</p>
+                    <div class="submenu submenu-software">
+                        <ul>
+                            <li><a href="/">NinjaFrog</a></li>
+                            <li><a href="/">NinjaFrog 1</a></li>
+                            <li><a href="/">NinjaFrog 2</a></li>
+                            <li><a href="/">NinjaFrog 3</a></li>
+                        </ul>
+                    </div>
+                </li>
                 <li><a href="/">About Me</a></li>
             </ul>
         </div>
