--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="../plugins/fontawesome-6.4.0/css/all.css">
-    <script src="../plugins/jquery/jquery.js"></script>
-    <script src="index.js"></script>
+    <link rel="stylesheet" href="src/index.css">
+    <link rel="stylesheet" href="plugins/fontawesome-6.4.0/css/all.css">
+    <script src="plugins/jquery/jquery.js"></script>
+    <script src="src/index.js"></script>
     <title>Overview</title>
 </head>
 <body>
