Adding the introduction and changing a little bit the navbar

--- a/index.html
+++ b/index.html
@@ -36,10 +36,18 @@
             </div>
         </div>
     </header>
-    <div class="container">
-        lul
+    <div class="main-content">
+        <div class="container">
+            <div class="introduction">
+                <p>
+                    Hello everyone and welcome to my Website !
+                    Thanks to this interface, you will be able to download and install every piece of software I have created in the last 3 years.
+                    To get more information about the software, you can click on the "Software" link on the navigation bar or directly clickon one of the images to get redirected.
+                    I hope you enjoy !
+                </p>
+            </div>
+        </div>
     </div>
-
     <footer>
         all my information
     </footer>
