Starting to add carousel

--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
                     I hope you enjoy !
                 </p>
             </div>
+            <div class="carousel">
+                <div class="items">
+                    <div class="item show" style="background:red;">NinjaFrog 1</div>
+                    <div class="item" style="background:green;">NinjaFrog 2</div>
+                    <div class="item" style="background:yellow;">NinjaFrog 3</div>
+                    <div class="item" style="background:violet;">NinjaFrog 4</div>
+                </div>
+                <div class="buttons">
+                    <div class="button selected"></div>
+                    <div class="button"></div>
+                    <div class="button"></div>
+                    <div class="button"></div>
+                </div>
+            </div>
         </div>
     </div>
     <footer>
