Fixing z-indexes problem

--- a/index.html
+++ b/index.html
@@ -36,29 +36,28 @@
             </div>
         </div>
     </header>
-    <div class="main-content">
-        <div class="container">
-            <div class="introduction">
-                <p>
-                    Hello everyone and welcome to my Website !
-                    Thanks to this interface, you will be able to download and install every piece of software I have created in the last 3 years.
-                    To get more information about the software, you can click on the "Software" link on the navigation bar or directly clickon one of the images to get redirected.
-                    I hope you enjoy !
-                </p>
+    <div class="container">
+        <div class="introduction">
+            <p>
+                Hello everyone and welcome to my Website !
+                Thanks to this interface, you will be able to download and install every piece of software I have created in the last 3 years.
+                To get more information about the software, you can click on the "Software" link on the navigation bar or directly clickon one of the images to get redirected.
+                I hope you enjoy !
+            </p>
+        </div>
+        <div class="carousel">
+            <div class="items">
+                <div class="item show" style="background:red;">NinjaFrog 1</div>
+                <div class="item" style="background:green;">NinjaFrog 2</div>
+                <div class="item" style="background:yellow;">NinjaFrog 3</div>
+                <div class="item" style="background:violet;">NinjaFrog 4</div>
             </div>
-            <div class="carousel">
-                <div class="items">
-                    <div class="item show" style="background:red;">NinjaFrog 1</div>
-                    <div class="item" style="background:green;">NinjaFrog 2</div>
-                    <div class="item" style="background:yellow;">NinjaFrog 3</div>
-                    <div class="item" style="background:violet;">NinjaFrog 4</div>
-                </div>
-                <div class="buttons">
-                    <div class="button selected"></div>
-                    <div class="button"></div>
-                    <div class="button"></div>
-                    <div class="button"></div>
-                </div>
+            <div class="buttons">
+                hhh
+                <div class="button selected"></div>
+                <div class="button"></div>
+                <div class="button"></div>
+                <div class="button"></div>
             </div>
         </div>
     </div>
