Adding features to carousel

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="src/index.css">
     <link rel="stylesheet" href="plugins/fontawesome-6.4.0/css/all.css">
     <script src="plugins/jquery/jquery.js"></script>
+    <script src="src/carousel.js"></script>
     <script src="src/index.js"></script>
     <title>Overview</title>
 </head>
@@ -47,14 +48,13 @@
         </div>
         <div class="carousel">
             <div class="items">
-                <div class="item show" style="background:red;">NinjaFrog 1</div>
+                <div class="item" style="background:red;">NinjaFrog 1</div>
                 <div class="item" style="background:green;">NinjaFrog 2</div>
                 <div class="item" style="background:yellow;">NinjaFrog 3</div>
                 <div class="item" style="background:violet;">NinjaFrog 4</div>
             </div>
             <div class="buttons">
-                hhh
-                <div class="button selected"></div>
+                <div class="button"></div>
                 <div class="button"></div>
                 <div class="button"></div>
                 <div class="button"></div>
