--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
                 <div class="button"></div>
                 <div class="button"></div>
             </div>
+            <!--<div class="arrows">
+                <div id="right"><i class="fa-solid fa-caret-right"></i></div>
+                <div id="left"><i class="fa-solid fa-caret-left"></i></div>
+            </div>-->
         </div>
     </div>
     <footer>
