Adding the arrows but not working yet

--- a/index.html
+++ b/index.html
@@ -59,10 +59,14 @@
                 <div class="button"></div>
                 <div class="button"></div>
             </div>
-            <!--<div class="arrows">
-                <div id="right"><i class="fa-solid fa-caret-right"></i></div>
-                <div id="left"><i class="fa-solid fa-caret-left"></i></div>
-            </div>-->
+            <div class="arrows">
+                <div class="left-arrow-container">
+                    <i class="fa-solid fa-caret-left" id="left-arrow"></i>
+                </div>       
+                <div class="right-arrow-container">
+                    <i class="fa-solid fa-caret-right" id="right-arrow"></i>
+                </div>
+            </div>
         </div>
     </div>
     <footer>
