Adding carousel buttons dynamically

--- a/index.html
+++ b/index.html
@@ -52,12 +52,11 @@
                 <div class="item" style="background:green;">NinjaFrog 2</div>
                 <div class="item" style="background:yellow;">NinjaFrog 3</div>
                 <div class="item" style="background:violet;">NinjaFrog 4</div>
+                <div class="item" style="background:blue;">NinjaFrog 5</div>
+                <div class="item" style="background:black;">NinjaFrog 6</div>
             </div>
             <div class="buttons">
-                <div class="button"></div>
-                <div class="button"></div>
-                <div class="button"></div>
-                <div class="button"></div>
+                <!--This part will be added dynamically-->
             </div>
             <div class="arrows">
                 <div class="left-arrow-container">
