Adding fade in fade out animation

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="item" style="background:yellow;">NinjaFrog 3</div>
                 <div class="item" style="background:violet;">NinjaFrog 4</div>
                 <div class="item" style="background:blue;">NinjaFrog 5</div>
-                <div class="item" style="background:black;">NinjaFrog 6</div>
+                <div class="item" style="background:gray;color:white">NinjaFrog 6</div>
             </div>
             <div class="buttons">
                 <!--This part will be added dynamically-->
