Adding bg and images to carousel

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/carousel.css">
     <link rel="stylesheet" href="src/index.css">
     <link rel="stylesheet" href="plugins/fontawesome-6.4.0/css/all.css">
     <script src="plugins/jquery/jquery.js"></script>
@@ -48,12 +49,12 @@
         </div>
         <div class="carousel">
             <div class="items">
-                <div class="item" style="background:red;">NinjaFrog 1</div>
-                <div class="item" style="background:green;">NinjaFrog 2</div>
-                <div class="item" style="background:yellow;">NinjaFrog 3</div>
-                <div class="item" style="background:violet;">NinjaFrog 4</div>
-                <div class="item" style="background:blue;">NinjaFrog 5</div>
-                <div class="item" style="background:gray;color:white">NinjaFrog 6</div>
+                <div id="bg"></div>
+                <div class="item"><img src="resources/img/cat.png" alt="cat1"></div>
+                <div class="item"><img src="resources/img/cat-red.png" alt="cat2"></div>
+                <div class="item"><img src="resources/img/cat-blue.png" alt="cat3"></div>
+                <div class="item"><img src="resources/img/cat-green.png" alt="cat4"></div>
+                <div class="item"><img src="resources/img/cat-white.png" alt="cat5"></div>
             </div>
             <div class="buttons">
                 <!--This part will be added dynamically-->
