Adding some files for a future template with header and footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="plugins/fontawesome-6.4.0/css/all.css">
     <script src="plugins/jquery/jquery.js"></script>
     <script src="src/carousel.js"></script>
+    <script src="src/templates.js"></script>
     <script src="src/index.js"></script>
     <title>Overview</title>
 </head>
