--- a/index.html
+++ b/index.html
@@ -14,30 +14,7 @@
 </head>
 <body>
     <header>
-        <div class="navbar no-select">
-            <ul class="links">
-                <li><a href="/">Home</a></li>
-                <li>
-                    <p class="link submenu-btn" id="software">Software</p>
-                    <div class="submenu submenu-software">
-                        <ul>
-                            <li><a href="/">NinjaFrog</a></li>
-                            <li><a href="/">NinjaFrog 1</a></li>
-                            <li><a href="/">NinjaFrog 2</a></li>
-                            <li><a href="/">NinjaFrog 3</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li><a href="/">About Me</a></li>
-            </ul>
-        </div>
-        <div class="btn-holder">
-            <div class="title">PMO Software</div>
-            <div class="phone-btn">
-                    <i class="fa-solid fa-bars" id="bar"></i>
-                    <i class="fa-solid fa-xmark" id="cross"></i>
-            </div>
-        </div>
+        <!--This is added with templates-->
     </header>
     <div class="container">
         <div class="introduction">
@@ -71,7 +48,7 @@
         </div>
     </div>
     <footer>
-        all my information
+        <!--This is added with templates-->
     </footer>
 </body>
 </html>
