--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/carousel.css">
+    <link rel="stylesheet" href="src/carousel/carousel.css">
     <link rel="stylesheet" href="src/index.css">
     <link rel="stylesheet" href="plugins/fontawesome-6.4.0/css/all.css">
     <script src="plugins/jquery/jquery.js"></script>
-    <script src="src/carousel.js"></script>
-    <script src="src/templates.js"></script>
+    <script src="src/carousel/carousel.js"></script>
+    <script src="src/templates/templates.js"></script>
+    <script src="src/templates/header/header.js"></script>
+    <script src="src/templates/footer/footer.js"></script>
     <script src="src/index.js"></script>
     <title>Overview</title>
 </head>
