Ending project reorganization

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/carousel/carousel.css">
-    <link rel="stylesheet" href="src/index.css">
     <link rel="stylesheet" href="plugins/fontawesome-6.4.0/css/all.css">
+    <link rel="stylesheet" href="src/index.css">
+    <link rel="stylesheet" href="src/carousel/carousel.css">
+    <link rel="stylesheet" href="src/templates/footer/footer.css">
+    <link rel="stylesheet" href="src/templates/header/header.css">
+    <link rel="stylesheet" href="src/all.css">
     <script src="plugins/jquery/jquery.js"></script>
     <script src="src/carousel/carousel.js"></script>
     <script src="src/templates/templates.js"></script>
