--- a/src/software/software.html
+++ b/src/software/software.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../plugins/fontawesome-6.4.0/css/all.css">
+    <link rel="stylesheet" href="../templates/footer/footer.css">
+    <link rel="stylesheet" href="../templates/header/header.css">
+    <link rel="stylesheet" href="../all.css">
     <script src="../../plugins/jquery/jquery.js"></script>
     <script src="../templates/templates.js"></script>
     <script src="../templates/header/header.js"></script>
