Starting to add the slider class

--- a/src/software/software.html
+++ b/src/software/software.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="../templates/footer/footer.css">
     <link rel="stylesheet" href="../templates/header/header.css">
     <link rel="stylesheet" href="../all.css">
+    <link rel="stylesheet" href="../slider/slider.css">
+    <link rel="stylesheet" href="software.css">
     <script src="../../plugins/jquery/jquery.js"></script>
     <script src="../templates/templates.js"></script>
     <script src="../templates/header/header.js"></script>
     <script src="../templates/footer/footer.js"></script>
+    <script src="../slider/slider.js"></script>
     <script src="software.js"></script>
     <script></script>
     <title></title>
@@ -20,7 +23,27 @@
         <!--Template-->
     </header>
     <div class="main-container">
-
+        <div class="description">
+            <div class="intro">
+                lulllll
+            </div>
+            <div class="content">
+            </div>
+        </div>
+        <div class="slider">
+            <div class="img"><img src="../../resources/img/cat-blue.png" alt=""></div>
+            <div class="img"><img src="../../resources/img/cat-green.png" alt=""></div>
+            <div class="img"><img src="../../resources/img/cat-red.png" alt=""></div>
+            <div class="img"><img src="../../resources/img/cat-white.png" alt=""></div>
+            <div class="img"><img src="../../resources/img/cat.png" alt=""></div>
+        </div>
+        <div class="download">
+            <ul class="links">
+                <li>Windows</li>
+                <li>Linux</li>
+                <li>Source code</li>
+            </ul>
+        </div>
     </div>
     <footer>
         <!--Template-->
