--- a/src/software/software.html
+++ b/src/software/software.html
@@ -31,11 +31,21 @@
             </div>
         </div>
         <div class="slider">
-            <div class="img"><img src="../../resources/img/cat-blue.png" alt=""></div>
-            <div class="img"><img src="../../resources/img/cat-green.png" alt=""></div>
-            <div class="img"><img src="../../resources/img/cat-red.png" alt=""></div>
-            <div class="img"><img src="../../resources/img/cat-white.png" alt=""></div>
-            <div class="img"><img src="../../resources/img/cat.png" alt=""></div>
+            <div class="imgs">
+                <div class="img">hello 1</div>
+                <div class="img">hello 2</div>
+                <div class="img">hello 3</div>
+                <div class="img">hello 4</div>
+                <div class="img">hello 5</div>
+            </div>
+            <div class="arrows">
+                <div class="left-arrow-container">
+                    <i class="fa-solid fa-caret-left" id="left-arrow"></i>
+                </div>       
+                <div class="right-arrow-container">
+                    <i class="fa-solid fa-caret-right" id="right-arrow"></i>
+                </div>
+            </div>
         </div>
         <div class="download">
             <ul class="links">
