Adding images to the slider

--- a/src/software/software.html
+++ b/src/software/software.html
@@ -32,9 +32,9 @@
         </div>
         <div class="slider">
             <div class="imgs">
-                <div class="img">hello 1</div>
-                <div class="img">hello 2</div>
-                <div class="img">hello 3</div>
+                <div class="img"><img src="../../resources/img/cat.png" alt=""></div>
+                <div class="img"><img src="../../resources/img/cat-green.png" alt=""></div>
+                <div class="img"><img src="../../resources/img/cat-red.png" alt=""></div>
             </div>
             <div class="arrows">
                 <div class="left-arrow-container">
