Fixing z-index bug

--- a/src/software/software.html
+++ b/src/software/software.html
@@ -35,6 +35,7 @@
                 <div class="img"><img src="../../resources/img/cat.png" alt=""></div>
                 <div class="img"><img src="../../resources/img/cat-green.png" alt=""></div>
                 <div class="img"><img src="../../resources/img/cat-red.png" alt=""></div>
+                <div class="img"><img src="../../resources/img/cat-white.png" alt=""></div>
             </div>
             <div class="arrows">
                 <div class="left-arrow-container">
