Adding image links

--- a/src/software/software.html
+++ b/src/software/software.html
@@ -32,7 +32,7 @@
         </div>
         <div class="slider">
             <div class="imgs">
-                <div class="img"><img src="../../resources/img/cat.png" alt=""></div>
+                <div class="img"><img src="../../resources/img/cat.png" alt="" class="link" id="/"></div>
                 <div class="img"><img src="../../resources/img/cat-green.png" alt=""></div>
                 <div class="img"><img src="../../resources/img/cat-red.png" alt=""></div>
                 <div class="img"><img src="../../resources/img/cat-white.png" alt=""></div>
