Adding slider's arrows dynamically

--- a/src/software/software.html
+++ b/src/software/software.html
@@ -37,12 +37,7 @@
                 <div class="img"><img src="../../resources/img/cat-red.png" alt=""></div>
                 <div class="img"><img src="../../resources/img/cat-white.png" alt=""></div>
             </div>
-            <div class="left-arrow-container">
-                <i class="fa-solid fa-caret-left" id="left-arrow"></i>
-            </div>       
-            <div class="right-arrow-container">
-                <i class="fa-solid fa-caret-right" id="right-arrow"></i>
-            </div>
+            <!--Arrows are added dynamically-->
         </div>
         <div class="download">
             <ul class="links">
